[metadata]
name = ezlaunch
version = 1.2.1
url = https://github.com/prestonlab/launch
author = Neal Morton
author_email = mortonne@gmail.com
description = EZLaunch: Tools to run slurm jobs with launcher
long_description = file: README.md
long_description_content_type = text/markdown
keywords = HPC, slurm, launcher
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    toml
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
